--- a/public/index.html
+++ b/public/index.html
@@ -24,22 +24,8 @@
 		</div>
 		<div id = "col2" class="col">
 			<div>
-				<label class="labelClass">Program Type</label>
-				<select id="programType" name="Program Type">
-					<option value="" disabled selected hidden>Select Type of Program</option>
-					<option value="STORED_VALUE_PROGRAM">Stored Value Program</option>
-					<option value="POINTS_PROGRAM">Points Program</option>
-				</select>
-			</div>
-			<div>
-				<label class="labelClass">Program ID</label>
-				<input class="textbox" placeholder="Enter Program ID" type="text" required="required" id = "programId" minlength="1" />
-			</div>
-			<div>
-				<label class="labelClass">Adjustment Amount</label>
-				<input class="textbox" placeholder="Enter Points / Stored Values" type="number" required="required" 
-				id = "ajustmentAmount"
-				minlength="1" />
+				<label class="labelClass"> Enter message </label>
+				<input class="textbox" placeholder="Enter message" type="text" required="required" id = "programId" minlength="1" />
 			</div>
 		</div>
 	</div>
