Dev | Updated UI code

--- a/public/index.html
+++ b/public/index.html
@@ -12,21 +12,19 @@
 </head>
 
 <body>
-	<div id="step1" class="step">
-		<p>Inputs for custom activity</p>
-		<div id = "col1" class="col">
-			<div id ="addCG" >
-				<label class="labelClass">Api Key</label>
-				<input class="textbox" placeholder="Enter Customer Group ID" type="text" required="required"
-					id = "apikey"
-					minlength="1" />
-			</div>
+	<p>Inputs for custom activity</p>
+	<div id="col1" class="col">
+		<div id="addCG">
+			<label class="labelClass">Api Key</label>
+			<input class="textbox" placeholder="Enter Api Key" type="text" required="required" id="apikey"
+				minlength="1" />
 		</div>
-		<div id = "col2" class="col">
-			<div>
-				<label class="labelClass"> Enter message </label>
-				<input class="textbox" placeholder="Enter message" type="text" required="required" id = "programId" minlength="1" />
-			</div>
+	</div>
+	<div id="col2" class="col">
+		<div>
+			<label class="labelClass"> Enter Message </label>
+			<input class="textbox" placeholder="Enter message" type="text" required="required" id="programId"
+				minlength="1" />
 		</div>
 	</div>
 </body>
