UI labels changed

--- a/public/index.html
+++ b/public/index.html
@@ -13,19 +13,15 @@
 
 <body>
 	<p>Inputs for custom activity</p>
-	<div id="col1" class="col">
-		<div id="addCG">
-			<label class="labelClass">Api Key</label>
-			<input class="textbox" placeholder="Enter Api Key" type="text" required="required" id="apikey"
-				minlength="1" />
-		</div>
-	</div>
-	<div id="col2" class="col">
-		<div>
-			<label class="labelClass"> Enter Message </label>
-			<input class="textbox" placeholder="Enter message" type="text" required="required" id="programId"
-				minlength="1" />
-		</div>
+	<div>
+		<label class="labelClass">Api Key</label>
+		<input class="textbox" placeholder="Enter Api Key" type="text" required="required" id="apikey"
+			minlength="1" />
+			<div>
+				<label class="labelClass">Message</label>
+				<textarea class="textbox" placeholder="Enter message" required="required" id="message"
+					minlength="1" ></textarea>
+			</div>
 	</div>
 </body>
 
